[gd_scene load_steps=32 format=3 uid="uid://b0yfxh4x4ya6a"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_ux2xd"]
[ext_resource type="Texture2D" uid="uid://bygaew5b2mw8s" path="res://assets/sprites/player/ron_idle.png" id="2_l6egb"]
[ext_resource type="Texture2D" uid="uid://dgf5n64jrxp8j" path="res://assets/sprites/player/ron_fall.png" id="2_x1nan"]
[ext_resource type="PackedScene" uid="uid://db2a7kktrhvpt" path="res://scenes/ability_box.tscn" id="3_ndxmv"]
[ext_resource type="Texture2D" uid="uid://c6pno6mtog2rt" path="res://assets/sprites/player/ron_run.png" id="3_q4lvq"]
[ext_resource type="Texture2D" uid="uid://c22mgaomyhny7" path="res://assets/sprites/player/ron_jump.png" id="4_f1y6b"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nhql2"]
atlas = ExtResource("3_q4lvq")
region = Rect2(2, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_jm4xc"]
atlas = ExtResource("3_q4lvq")
region = Rect2(38, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_075nd"]
atlas = ExtResource("3_q4lvq")
region = Rect2(74, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_w7a8u"]
atlas = ExtResource("3_q4lvq")
region = Rect2(110, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_7yw6u"]
atlas = ExtResource("3_q4lvq")
region = Rect2(146, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_yloww"]
atlas = ExtResource("3_q4lvq")
region = Rect2(182, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_xy7g8"]
atlas = ExtResource("3_q4lvq")
region = Rect2(218, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8vhr"]
atlas = ExtResource("3_q4lvq")
region = Rect2(254, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_niyo0"]
atlas = ExtResource("3_q4lvq")
region = Rect2(290, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_sffdn"]
atlas = ExtResource("3_q4lvq")
region = Rect2(326, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_fyf2a"]
atlas = ExtResource("3_q4lvq")
region = Rect2(362, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_7u0bw"]
atlas = ExtResource("3_q4lvq")
region = Rect2(2, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_2klhy"]
atlas = ExtResource("3_q4lvq")
region = Rect2(38, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_oqg0r"]
atlas = ExtResource("3_q4lvq")
region = Rect2(74, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_y7xxn"]
atlas = ExtResource("3_q4lvq")
region = Rect2(110, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_nv34y"]
atlas = ExtResource("3_q4lvq")
region = Rect2(146, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmtx0"]
atlas = ExtResource("3_q4lvq")
region = Rect2(182, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_hc36w"]
atlas = ExtResource("3_q4lvq")
region = Rect2(218, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_4gcja"]
atlas = ExtResource("3_q4lvq")
region = Rect2(254, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3f66"]
atlas = ExtResource("3_q4lvq")
region = Rect2(290, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_l818v"]
atlas = ExtResource("3_q4lvq")
region = Rect2(326, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_t88q6"]
atlas = ExtResource("3_q4lvq")
region = Rect2(362, 0, 36, 36)

[sub_resource type="SpriteFrames" id="SpriteFrames_k5l0q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_x1nan")
}],
"loop": true,
"name": &"fall",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_l6egb")
}],
"loop": true,
"name": &"idle",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_f1y6b")
}],
"loop": true,
"name": &"jump",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nhql2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jm4xc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_075nd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w7a8u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7yw6u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yloww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xy7g8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8vhr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_niyo0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sffdn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fyf2a")
}],
"loop": true,
"name": &"run",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7u0bw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2klhy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oqg0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y7xxn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nv34y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmtx0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hc36w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4gcja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3f66")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l818v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t88q6")
}],
"loop": true,
"name": &"sprint",
"speed": 30.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0rp38"]
size = Vector2(9, 30)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_lj6cy"]
lifetime_randomness = 1.0
particle_flag_align_y = true
particle_flag_rotate_y = true
particle_flag_disable_z = true
emission_shape_scale = Vector3(0, 1, 1)
direction = Vector3(0, 100, 0)
spread = 180.0
initial_velocity_min = 146.07
initial_velocity_max = 157.3
gravity = Vector3(0, -100, 0)
scale_min = 2.0
scale_max = 2.0
color = Color(0, 0.960784, 1, 1)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_ux2xd")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_k5l0q")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 3)
shape = SubResource("RectangleShape2D_0rp38")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 0.252
one_shot = true

[node name="AbilityContainer" type="Node" parent="."]

[node name="AbilityBox" parent="." instance=ExtResource("3_ndxmv")]
position = Vector2(268, -142)
scale = Vector2(0.391305, 0.391305)

[node name="SweatParticles" type="GPUParticles2D" parent="."]
show_behind_parent = true
position = Vector2(1, -10)
emitting = false
amount = 4
process_material = SubResource("ParticleProcessMaterial_lj6cy")
lifetime = 0.1
